--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Comidas del fin <br> del mundo
+                    Mis deportes <br> favoritos
                 </h1>
                 <p class="my-5">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
@@ -79,7 +79,7 @@
         <div class="row">
             <div class="col-12 col-md-4">
                 <i class="fas fa-camera fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
+                <h3 class="my-3 fw-bold">Levantamiento de peso</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -89,7 +89,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <i class="fas fa-bullhorn fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Crítica culinaria</h3>
+                <h3 class="my-3 fw-bold">Ginmasia</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -99,7 +99,7 @@
             </div>
             <div class="col-12 col-md-4">
                 <i class="far fa-map fa-3x my-3"></i>
-                <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
+                <h3 class="my-3 fw-bold">Artes marciales</h3>
                 <p class="my-3">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
@@ -113,14 +113,14 @@
 
     <section id="Mis-trabajos" class="my-5 p-5 bg-info">
 
-        <h2 class="display-4 fw-bold text-center text-light mb-3">Mis trabajos</h2>
+        <h2 class="display-4 fw-bold text-center text-light mb-3">Movimientos Favoritos</h2>
 
         <div class="row">
             <div class="col-12 col-sm-4 py-2">
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/carta-1.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
+                        <h5 class="card-title fw-bold">Backsquat</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Explicabo iure sint, perspiciatis distinctio molestias nihil
@@ -137,7 +137,7 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/carta-2.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
+                        <h5 class="card-title fw-bold">Pull-ups</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
@@ -154,7 +154,7 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/carta-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Hell hook</h5>
                         <p class="card-text">
                             Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                             Obcaecati facere quibusdam sint id laborum magni velit ducimus
